[tool.poetry]
name = "sus-io"
version = "0.2.1"
description = "A SUS (Sliding Universal Score) parser and generator."
authors = ["mkpoli <mkpoli@mkpo.li>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mkpoli/sus-io#readme"
repository = "https://github.com/mkpoli/sus-io"
keywords = ["sus", "pjsekai", "chunithm", "seaurchin"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Games/Entertainment :: Arcade",
    "Topic :: Utilities"
]
packages = [
    { include = "sus", from = "src" }
]
include = [
    "LICENSE",
    "README.md",
    "CHANGELOG.md"
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/mkpoli/sus-io/issues"
"Changelog" = "https://github.com/mkpoli/sus-io/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = "^3.9"
dataclasses-json = "^0.5.6"
base36 = "^0.1.1"
single-source = "^0.2.0"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
test = "tests.test:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
